<resources>
    <string name="app_name">NotetakingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="crt_nt_title">Title</string>
    <string name="type_your_contents_here">Type your note here..</string>
    <string name="menu_add_image">Add Image</string>
    <string name="menu_pin">Pin</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="pref_key_sharing">enable_sharing</string>
    <string name="pref_sharing_title">Enable Sharing</string>
    <string name="key_srt_new_btm">sort_new_notes_bottom</string>
    <string name="srt_new_btm_title">Show new notes to bottom</string>
</resources>