<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        app:showAsAction="never"
        android:id="@+id/action_add_img"
        android:icon="@drawable/ic_menu_attach"
        android:title="@string/menu_add_image"
        />
    <item
        app:showAsAction="never"
        android:id="@+id/action_pin_nt"
        android:icon="@drawable/ic_menu_pin"
        android:title="@string/menu_pin"/>
    <item
        app:showAsAction="never"
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_attach"
        android:title="@string/menu_share"/>
    <item
        app:showAsAction="never"
        android:id="@+id/action_dlt_nt"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/menu_delete"/>

</menu>